--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { version = "1", features = ["full"] }
 reqwest = "0.12"
 async-trait = "0.1"
 serde_urlencoded = "0.7"
+derive_builder = "0.20.0"
