--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -1,14 +1,15 @@
-[workspace]
-members = ["core", "macros"]
-resolver = "2"
-
 [package]
-name = "telegrapher"
+name = "core"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
-core = { path = "core" }
-macros = { path = "macros" }
+reqwest = "0.12"
+async-trait = "0.1"
+serde_urlencoded = "0.7"
+derive_builder = "0.20.0"
