--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ edition = "2021"
 tokio = { version = "1", features = ["full"] }
 core = { path = "core" }
 macros = { path = "macros" }
+serde = { version = "1.0", features = ["derive"] }
