--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,7 +9,13 @@ edition = "2021"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
-reqwest = "0.12"
+tokio-util = "0.7"
+reqwest = { version = "0.12", features = [
+    "json",
+    "multipart",
+    "blocking",
+    "stream",
+] }
 async-trait = "0.1"
 serde_urlencoded = "0.7"
 derive_builder = "0.20.0"
