--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -19,5 +19,6 @@ reqwest = { version = "0.12", features = [
 async-trait = "0.1"
 serde_urlencoded = "0.7"
 derive_builder = "0.20.0"
-once_cell = "1.19.0"
 async-std = "1.10.0"
+axum = "0.7"
+tower-http = { version = "^0.5.2", features = ["cors"] }
