--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ tokio = { version = "1", features = ["full"] }
 core = { path = "core" }
 macros = { path = "macros" }
 serde = { version = "1.0", features = ["derive"] }
+log = "0.4"
